[package]
name = "redis_cluster_async"
version = "0.1.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
keywords = ["redis", "cluster", "database", "async"]
description = "Async redis cluster driver for Rust."
homepage = "https://github.com/Marwes/redis-cluster-async"
repository = "https://github.com/Marwes/redis-cluster-async"
license = "MIT"
readme = "README.md"

edition = "2018"

[dependencies]
crc16 = "0.4"
futures = { version = "0.3.0-alpha.18", package = "futures-preview" }
rand = "0.7"
pin-project = "0.4"
redis = { path = "../redis-rs", features = ["executor"] } 
tokio-executor = "0.2.0-alpha.6"
tokio-timer = "0.3.0-alpha.6"
log = "0.4"

[dev-dependencies]
lazy_static = "1"
tokio = "0.2.0-alpha.6"
env_logger = "0.6"
proptest = "0.9"
